<resources>
    <string name="app_name">ManoCalc</string>
    <string name="num_2">Num 2:</string>
    <string name="num_1">Num 1:</string>
    <string name="_0">0</string>
    <string name="result">Result:</string>
    <string name="add">Add</string>
    <string name="mul">Mul</string>
    <string name="div">Div</string>
    <string name="sub">Sub</string>
    <string name="reset">Reset</string>
</resources>