<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E96A056A"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="149dp"
        android:layout_height="67dp"
        android:onClick="addNumbers"
        android:text="@string/add"
        android:textSize="24sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="151dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:onClick="mulNumbers"
        android:text="@string/mul"
        android:textSize="24sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd"
        app:layout_constraintVertical_bias="0.004" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="158dp"
        android:layout_height="62dp"
        android:layout_marginTop="33dp"
        android:onClick="divNumbers"
        android:text="@string/div"
        android:textSize="24sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSub"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="160dp"
        android:layout_height="65dp"
        android:onClick="subNumbers"
        android:text="@string/sub"
        android:textSize="24sp"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <TextView
        android:id="@+id/textViewResultLbl"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#ECDDDD"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="336dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:textColor="#ECDDDD"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textViewNum2"
        android:layout_width="146dp"
        android:layout_height="62dp"
        android:text="@string/num_2"
        android:textColor="#ECDDDD"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.201" />

    <EditText
        android:id="@+id/editTextNum2"
        android:layout_width="204dp"
        android:layout_height="62dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="right"
        android:inputType="number|numberDecimal"
        android:textColor="#EFE9E9"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.185"
        tools:ignore="HardcodedText,LabelFor,RtlHardcoded" />

    <EditText
        android:id="@+id/editTextNum1"
        android:layout_width="219dp"
        android:layout_height="64dp"
        android:ems="10"
        android:gravity="right"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textColor="#EFE9E9"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        tools:ignore="LabelFor,RtlHardcoded" />

    <TextView
        android:id="@+id/textViewNum1"
        android:layout_width="146dp"
        android:layout_height="62dp"
        android:text="@string/num_1"
        android:textColor="#ECDDDD"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:onClick="resetAll"
        android:text="@string/reset"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:cornerRadius="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

</androidx.constraintlayout.widget.ConstraintLayout>